src/objects/DCE_OrgAmend__c.object
<CustomObject>
    <description>This custom object is used to track changes that a Dementia Connect external partner would like to make to their Org details on the Dementia Connect website. We keep these changes on a separate object as it allows an approval process to be put in place and for locks, etc, to be implemented</description>
    <fields>
        <fullName>BillingCity__c</fullName>
        <description>Used to populate changes to the city/town value on a Dementia Connect Extranet Partner Org</description>
        <label>Town/City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <description>Used to capture the country information for changes to a DCE Partner Org&apos;s address</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <description>Used to capture the Post codeinformation for changes to a DCE Partner Org&apos;s address</description>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <description>Used to capture the state/county information for changes to a DCE Partner Org&apos;s address</description>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <description>Used to capture the street information for changes to a DCE Partner Org&apos;s address</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Organisation Name</description>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Contact_Hours__c</fullName>
        <inlineHelpText>Record days and times the service is available in the following format: Monday-Friday, 09:00-17:00</inlineHelpText>
        <label>Office Contact Hours</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganisationId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OrganisationId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DCE Amendments</relationshipLabel>
        <relationshipName>DCEPartnerAmendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Organisation Phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCE_Amendment_Statuses</valueSetName>
        </valueSet>
    </fields>
    <label>DCE Partner Amendment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DCE_Admins_DCE_OrgAmend</fullName>
        <filterScope>Queue</filterScope>
        <label>Dementia Connect Portal Admins</label>
        <queue>DCE_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DCEP{0}</displayFormat>
        <label>DCE Partner Change or Amendment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCE Partner Amendments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>